manifests/deployment-aws.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $deployment
  namespace: node-cicd
spec:
  replicas: $replicas
  selector:
    matchLabels:
      app: addressbook
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: addressbook
        deployment: $deployment
    spec:
      imagePullSecrets:
        - name: aws-ecr
      containers:
        - name: addressbook
          image: $img
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
