manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: addressbook-lb
  namespace: node-cicd
spec:
  selector:
    app: addressbook
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
