manifests/ingress.yml
# Expose the service through an ingress object

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/subnets: subnet-a4f0098e,subnet-457ed533,subnet-95c904cd
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: node-cicd-ingress
  namespace: node-cicd
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: addressbook-lb
              servicePort: 80
